Rewrite using compact source files